--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <body>
     <!-- Video Background -->
     <video autoplay loop muted>
-        <source src="56360-479358412.mp4" type="video/mp4">
+        <source src="vid.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
