--- a/index.html
+++ b/index.html
@@ -154,7 +154,14 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Warner Bros. All Rights Reserved.</p>
+        <ul class="social-media-icons">
+            <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
+            <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
+            <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
+            <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
+            <!-- Add more social media icons as needed -->
+        </ul>
+        <p>&copy; 2024 Your Website. All rights reserved.</p>
     </footer>
 </body>
 
