--- a/games & apps.html
+++ b/games & apps.html
@@ -119,7 +119,7 @@
 <body>
     <!-- Video Background -->
     <video autoplay loop muted>
-        <source src="your_video.mp4" type="video/mp4">
+        <source src="vid.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
