Update games & apps.html

--- a/games & apps.html
+++ b/games & apps.html
@@ -144,12 +144,7 @@
                 <img alt="Froza Horizon 5" height="234" class="auto-style1" src="froza.jpeg" width="149"/>
                 <figcaption>Froza Horizon 5</figcaption>
             </figure>
-            <div class="game-info" id="game-info-1">
-                <!-- Froza Horizon 5 Info -->
-                <p>This is the information for Froza Horizon 5</p>
-                <p>Forza Horizon 5 is a 2021 racing video game developed by Playground Games and published by Xbox Game Studios. It is the fifth Forza Horizon title and twelfth main instalment in the Forza series. The game is set in a fictionalised representation of Mexico. It was released on 9 November 2021 for Windows, Xbox One, and Xbox Series X/S.</p>
-                <p>The Requirements</p>
-                
+            < a href="froza.html"><div class="game-info" id="game-info-1"></a>   
             </div>
         </a>
 
