Update games & apps.html

--- a/games & apps.html
+++ b/games & apps.html
@@ -141,11 +141,9 @@
     <div class="game-list">
         <a href="#" onclick="toggleGameInfo('game-info-1')">
             <figure class="game-image">
-                <img alt="Froza Horizon 5" height="234" class="auto-style1" src="froza.jpeg" width="149"/>
+                < a href="froza.html"><img alt="Froza Horizon 5" height="234" class="auto-style1" src="froza.jpeg" width="149"/></a>
                 <figcaption>Froza Horizon 5</figcaption>
             </figure>
-            < a href="froza.html"><div class="game-info" id="game-info-1"></a>   
-            </div>
         </a>
 
         <a href="#" onclick="toggleGameInfo('game-info-2')">
