--- a/froza.html
+++ b/froza.html
@@ -1,27 +1,32 @@
-
 <!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="UTF-8">
-    <title>Warner Bros Website</title>
+    <title>Games & Apps</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        /* Styling for video background */
+        video {
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            min-width: 100%;
+            min-height: 100%;
+            z-index: -1; /* Ensure the video stays behind other content */
+        }
+
+        /* Styling for header */
+        header {
+            position: relative;
+            z-index: 2; /* Ensure header is above video */
+        }
+
+        /* Styling for navigation bar */
+        nav ul {
             margin: 0;
             padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: white;
-            padding: 20px;
+            list-style: none;
             text-align: center;
-        }
-
-        nav ul {
-            list-style-type: none;
-            padding: 0;
         }
 
         nav ul li {
@@ -32,48 +37,99 @@
         nav ul li a {
             color: white;
             text-decoration: none;
-        }
-
-        .image-grid {
-            display: grid;
-            grid-template-columns: auto 1fr;
-            grid-gap: 20px;
-            padding: 20px;
-        }
-
-        .image-item img {
-            width: 100%;
-            height: auto;
-            max-width: 400px;
-            display: block;
-            margin: 0 auto;
-        }
-
-        .image-title {
-            font-size: 24px;
             font-weight: bold;
-            margin-top: 10px;
+            font-size: 18px;
+            transition: color 0.3s;
         }
 
-        .about {
-            padding: 20px;
+        nav ul li a:hover {
+            color: #007bff;
         }
 
-        .about p {
-            margin-bottom: 20px;
-            line-height: 1.5;
+        /* Styling for game list */
+        .game-list {
+            margin-top: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            z-index: 2; /* Ensure game list is above video */
+        }
+
+        .game-list a {
+            text-decoration: none;
+            color: inherit;
+            margin: 10px;
+            position: relative;
+        }
+
+        .game-image {
+            position: relative;
+            overflow: hidden;
+            width: 149px;
+            height: 234px;
+        }
+
+        .game-image img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            transition: transform 0.3s;
+        }
+
+        .game-image figcaption {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 5px;
+            margin: 0;
+            color: white;
+            font-weight: bold;
+            text-align: center;
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+
+        .game-list a:hover .game-image figcaption {
+            opacity: 1;
+        }
+
+        /* Styling for game info */
+        .game-info {
+            display: none;
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(0, 0, 0, 0.8);
+            padding: 10px;
+            color: white;
+            width: 80%;
+            z-index: 3; /* Ensure game info is above other content */
+        }
+
+        .game-list a:hover .game-info {
+            display: block;
         }
     </style>
 </head>
 
 <body>
+    <!-- Video Background -->
+    <video autoplay loop muted>
+        <source src="vid.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
+    <!-- Content -->
     <header>
-        <a href="#top">
-            <img alt="Screenshot 2024-04-12 160015.png" height="90" src="Screenshot 2024-04-12 160015.png" width="100"></a>
+        <a href="#top"><img alt="logo" height="90" src="R.png" width="100"></a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="movies.html">Movies</a></li>
+                <li><a href="Movies.html">Movies</a></li>
                 <li><a href="TV Shows.html">TV Shows</a></li>
                 <li><a href="games & apps.html">Games & Apps</a></li>
                 <li><a href="collections.html">Collections</a></li>
