Update games & apps.html

--- a/games & apps.html
+++ b/games & apps.html
@@ -141,8 +141,8 @@
     <div class="game-list">
         <a href="#" onclick="toggleGameInfo('game-info-1')">
             <figure class="game-image">
-               <img alt="Froza Horizon 5" height="234" class="auto-style1" src="froza.jpeg" width="149"/>
-               <figcaption><a href="froza.html">Froza Horizon 5</a></figcaption>
+               <a href="froza.html"><img alt="Froza Horizon 5" height="234" src="froza.jpeg" width="149"></a>
+               <figcaption>Froza Horizon 5</figcaption>
             </figure>
         </a>
 
