--- a/froza.html
+++ b/froza.html
@@ -54,19 +54,16 @@
             align-items: center;
             margin-top: 20px;
             color: white;
+             display: grid;
+            grid-template-columns: auto 1fr;
+            grid-gap: 20px;
+            padding: 20px;
         }
 
         .image-item {
             margin: 10px;
             position: relative;
         }
-
-        .image-item img {
-            width: 200px; /* Adjust the width as needed */
-            height: auto; /* Maintain aspect ratio */
-            display: block;
-        }
-
         .image-title {
             position: absolute;
             bottom: 0;
@@ -77,6 +74,9 @@
             margin: 0;
             font-weight: bold;
             text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+            margin-top: 10px;
         }
 
         /* Styling for text content */
@@ -90,6 +90,18 @@
 
         .about p {
             color: white;
+               margin-bottom: 20px;
+            line-height: 1.5;
+        }
+        .image-item img {
+            width: 100%;
+            height: auto;
+            max-width: 400px;
+            display: block;
+            margin: 0 auto;
+        }
+        .about {
+            padding: 20px;
         }
     </style>
 </head>
