--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         }
 
         /* Styling for navigation bar */
-        nav ul {
+         nav ul {
             margin: 0;
             padding: 0;
             list-style: none;
@@ -104,7 +104,7 @@
         }
 
         nav ul li a {
-            color: #333;
+            color: white;
             text-decoration: none;
             font-weight: bold;
             font-size: 18px;
