--- a/bee.html
+++ b/bee.html
@@ -95,6 +95,8 @@ Stars: Jason Statham, Emmy Raver-Lampman, Bobby Naderi
 Genre: Action, Thriller
 Release Date: 2024-01-12
 One man's brutal campaign for vengeance takes on national stakes after he is revealed to be a former operative of a powerful and clandestine organization known as "Beekeepers."</p>
+        <p>Watch The Trailer</p>
+            <iframe width="958" height="539" src="https://www.youtube.com/embed/d92ht770AQ8" title="THE BEEKEEPER Official Trailer (2024) Jason Statham, Action Movie HD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </div>
 </body>
