--- a/blue.html
+++ b/blue.html
@@ -89,6 +89,8 @@
         <div class="about">
             <p>Blue Beetle is a 2023 American superhero film based on DC Comics featuring the character Jaime Reyes / Blue Beetle. Produced by DC Studios and the Safran Company, and distributed by Warner Bros. Pictures, it is the 14th film in the DC Extended Universe (DCEU). The film was directed by Ángel </p>
             <p>Blue Beetle premiered in El Paso on August 14, 2023, and was released in the United States on August 18. The film received generally positive reviews from critics and became the most streamed film on Max, the successor to HBO Max, in the United States. However, it underperformed at the box office, grossing $131 million worldwide against a production budget of $104–125 million, which made it the lowest-grossing film in the DCEU. Its box office performance was attributed to factors such as the 2023 Hollywood labor disputes, the franchise's imminent reboot with the DC Universe (DCU), and Hurricane Hilary.</p>
+            <p>Watch The Tralier</p>
+            <iframe width="958" height="539" src="https://www.youtube.com/embed/vS3_72Gb-bI" title="Blue Beetle – Official Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </div>
 </body>
