--- a/joker.html
+++ b/joker.html
@@ -89,8 +89,8 @@
         <div class="about">
             <p>Joker is a 2019 film that explores how struggling comedian Arthur Fleck grapples with mental illness and becomes the most feared supervillain in Gotham City1. The movie is set in 1981 and is the first live-action, R-rated Batman movie1. The film stars Joaquin Phoenix as Arthur Fleck2. The Joker is also a character portrayed by Heath Ledger and the main antagonist in Christopher Nolan's 2008 superhero film The Dark Knight3.</p>
             <p>The end of Joker begins with Joker’s appearance on the Murray Franklin Show. He is confident in a way we’ve never seen before. Initially, he plays into the light-hearted nature of the talk show format. When encouraged to tell a joke, he scans through his notebook and comes across a line we saw earlier in the film. “I just hope my death makes more cents than my life.” </p>
-
-
+            <p>Watch The Tralier</p>
+            <iframe width="958" height="539" src="https://www.youtube.com/embed/xRjvmVaFHkk" title="JOKER – Final Trailer – Warner Bros." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </div>
 </body>
