Update kung fu panda.html

--- a/kung fu panda.html
+++ b/kung fu panda.html
@@ -89,6 +89,8 @@
         <div class="about">
             <p>“Kung Fu Panda 4” is set to continue Po’s adventures as he becomes the Spiritual Leader of the Valley of Peace and must find and train a new Dragon Warrior. The movie features a new villain, a powerful sorceress named Chameleon, who seeks Po’s Staff of Wisdom to re-summon past villains Po has defeated. The cast includes Jack Black, Dustin Hoffman, and Viola Davis, with a run time of approximately 2 hours1234. The movie is part of the Kung Fu Panda franchise and follows the events of Kung Fu Panda 3 (2016)5. Would you like to know more about the release date or other specific details?</p>
             <p>After Po is tapped to become the Spiritual Leader of the Valley of Peace, he needs to find and train a new Dragon Warrior, while a wicked sorceress plans to re-summon all the master villains whom Po has vanquished to the spirit realm.</p>
+            <p>Watch The Tralier</p>
+            <iframe width="958" height="539" src="https://www.youtube.com/embed/_inKs4eeHiI" title="KUNG FU PANDA 4 | Official Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </div>
 </body>
