--- a/deadpool.html
+++ b/deadpool.html
@@ -84,7 +84,7 @@
     <div class="image-grid">
         <div class="image-item">
             <img alt="The Deadpool" src="deadpool.jpeg">
-            <div class="image-title">The Blue Bettle</div>
+            <div class="image-title">The Deadpool 3</div>
         </div>
         <div class="about">
             <p>Deadpool & Wolverine is an upcoming American superhero film based on the Marvel Comics characters Deadpool and Wolverine, produced by Marvel Studios, Maximum Effort, and 21 Laps Entertainment, and distributed by Walt Disney Studios Motion Pictures. It is intended to be the 34th film in the Marvel Cinematic Universe (MCU) and a sequel to Deadpool (2016) and Deadpool 2 (2018). The film is directed by Shawn Levy from a screenplay he wrote with Ryan Reynolds, Rhett Reese, Paul Wernick, and Zeb Wells. Reynolds and Hugh Jackman star as Deadpool and Wolverine, respectively, alongside Emma Corrin, Morena Baccarin, Rob Delaney, Leslie Uggams, Karan Soni, and Matthew Macfadyen. In the film, the Time Variance Authority (TVA) pull Deadpool from his quiet life and set him on a mission that will change the history of the MCU with Wolverine. </p>
